samples/errors/division_by_zero.lox
// Error: Division by zero
// expect: runtime error
print 1 / 0;
